--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: nodejs
     runtime: docker
-    dockerfilePath: ./api/Dockerfile
+    dockerfilePath: Dockerfile_nodejs
 
